fix bug on not showing download qr button and qr text

--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ input[type="text"] {
 }
 
 #download-link {
+  cursor: pointer;
   font-weight: bold;
   width: 90%;
   text-align: center;
